# dj-kompanion

./: .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
analyzer/: Dockerfile  Dockerfile.gpu  app.py  edm_reclassify.py  models.py  pipeline.py  requirements.txt
docs/: ARCHITECTURE.md  DESIGN.md  PLANS.md  gpu-analyzer-setup.md
docs/design-docs/: 2026-02-26-01-project-scaffold-design.md  2026-02-26-02a-downloader-design.md  2026-02-26-02b-tagger-design.md  2026-02-26-02c-enrichment-design.md  2026-02-26-03-server-design.md  2026-02-26-04-chrome-extension-design.md  2026-02-26-download-queue-design.md  2026-02-26-yt-dlp-dj-design.md  2026-02-27-audio-post-processing-design.md  2026-02-28-dockerized-analyzer-design.md  2026-02-28-metadata-api-enrichment-design.md  core-beliefs.md  index.md  (+2 more)
extension/: manifest.json  options.html  package-lock.json  package.json  popup.css  popup.html  tsconfig.json
scripts/: ralph-run.sh
server/: analysis_store.py  analyzer.py  app.py  beat_utils.py  cli.py  config.py  downloader.py  edm_reclassify.py  enrichment.py  key_detect.py  logging_config.py  metadata_lookup.py  models.py  serato_tags.py  tagger.py  track_db.py  vdj.py  vdj_sync.py
tests/: conftest.py  test_analysis_store.py  test_analyzer.py  test_app.py  test_beat_utils.py  test_cli.py  test_downloader.py  test_edm_reclassify.py  test_enrichment.py  test_integration.py  test_key_detect.py  test_metadata_lookup.py  test_models.py  test_serato_tags.py  test_tagger.py  test_track_db.py  test_vdj.py  test_vdj_sync.py
(+33 files in other folders)
